# dendrofan

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
examples/: quickstart.py  reproduce_real_station_dendrogram.py  reproduce_station_dendrogram.py
src/dendrofan/: __init__.py  annotations.py  clustering.py  exceptions.py  geometry.py  plotting.py  styling.py
tests/: conftest.py  test_clustering.py  test_geometry.py  test_plotting.py
