[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dendrofan"
version = "0.1.2"
description = "Circular (\"fan\") dendrograms for Python, in the visual style of R's ape package"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
authors = [
    { name = "Rafael Magallanes Quintanar" },
]
keywords = [
    "dendrogram",
    "hierarchical-clustering",
    "circular-plot",
    "fan-plot",
    "phylogenetics",
    "data-visualization",
    "scipy",
    "matplotlib",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
    "matplotlib>=3.4",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-mpl", "build"]

[project.urls]
Homepage = "https://github.com/tiquis/dendrofan"
Issues = "https://github.com/tiquis/dendrofan/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
